# jneqsim

./: .gitignore  .pre-commit-config.yaml  MIGRATION_GUIDE.md  README.md  generate_stubs.py  pyproject.toml  pyproject_enhanced.toml  test_dependency_management.py  test_dependency_only.py  test_multiple_versions.py  test_simple.py
.github/: CODEOWNERS
.github/workflows/: ci.yaml  nighly-run.yaml  nightly-run.yaml  on-push.yaml  publish.yaml  publish_jar_packages.yaml  tests.yaml
jneqsim/: __init__.py  dependencies.yaml  dependency_manager.py  generate_stubs.py  jar_cache.py  jvm_service.py  pyproject.toml
jneqsim-stubs/: pyproject.toml
jneqsim-stubs/jneqsim-stubs/: example.pyi
jneqsim-stubs/jneqsim-stubs/neqsim/chemicalReactions/chemicalReaction/: __init__.pyi
jneqsim-stubs/jneqsim-stubs/neqsim/fluidMechanics/flowSystem/: __init__.pyi
jneqsim-stubs/jneqsim-stubs/neqsim/fluidMechanics/util/fluidMechanicsDataHandeling/: __init__.pyi
jneqsim-stubs/jneqsim-stubs/neqsim/fluidMechanics/util/fluidMechanicsDataHandeling/onePhaseFileWriter/: __init__.pyi
jneqsim-stubs/jneqsim-stubs/neqsim/fluidMechanics/util/fluidMechanicsDataHandeling/onePhaseFileWriter/pipeFlowFileWriter/: __init__.pyi
jneqsim-stubs/jneqsim-stubs/neqsim/fluidMechanics/util/fluidMechanicsDataHandeling/twoPhaseFileWriter/twoPhasePipeFlowFileWriter/: __init__.pyi
jneqsim-stubs/jneqsim-stubs/neqsim/physicalProperties/interfaceProperties/solidAdsorption/: __init__.pyi
jneqsim-stubs/jneqsim-stubs/neqsim/processSimulation/measurementDevice/: __init__.pyi
jneqsim-stubs/jneqsim-stubs/neqsim/processSimulation/mechanicalDesign/: __init__.pyi
jneqsim-stubs/jneqsim-stubs/neqsim/processSimulation/processEquipment/heatExchanger/: __init__.pyi
jneqsim-stubs/jneqsim-stubs/neqsim/processSimulation/processEquipment/pipeline/: __init__.pyi
jneqsim-stubs/jneqsim-stubs/neqsim/processSimulation/processEquipment/reservoir/: __init__.pyi
jneqsim-stubs/jneqsim-stubs/neqsim/processSimulation/processEquipment/util/: __init__.pyi
jneqsim-stubs/jneqsim-stubs/neqsim/processSimulation/processEquipment/valve/: __init__.pyi
jneqsim-stubs/jneqsim-stubs/neqsim/processSimulation/processSystem/: __init__.pyi
jneqsim-stubs/jneqsim-stubs/neqsim/statistics/dataAnalysis/: __init__.pyi
jneqsim-stubs/jneqsim-stubs/neqsim/thermo/: __init__.pyi
jneqsim-stubs/jneqsim-stubs/neqsim/thermo/characterization/: __init__.pyi
jneqsim-stubs/jneqsim-stubs/neqsim/thermo/component/: __init__.pyi
jneqsim-stubs/jneqsim-stubs/neqsim/thermo/util/readwrite/: __init__.pyi
jneqsim-stubs/jneqsim-stubs/neqsim/thermodynamicOperations/flashOps/: __init__.pyi
jneqsim-stubs/jneqsim-stubs/neqsim/util/exception/: __init__.pyi
jneqsim/common/: config.yaml
jneqsim/jneqsim/: __init__.py  example.py  jvm_service.py
jneqsim/jneqsim-java11/: pyproject.toml
jneqsim/jneqsim-java11/jneqsim_java11/: __init__.py
jneqsim/jneqsim-java21/: pyproject.toml
jneqsim/jneqsim-java21/jneqsim_java21/: __init__.py
jneqsim/jneqsim-java8/: pyproject.toml
jneqsim/jpype/: __init__.pyi
jneqsim/neqsim/: __init__.pyi
jneqsim/neqsim/MathLib/nonLinearSolver/: __init__.pyi
jneqsim/neqsim/chemicalReactions/: __init__.pyi
jneqsim/neqsim/fluidMechanics/util/: __init__.pyi
jneqsim/neqsim/fluidMechanics/util/fluidMechanicsDataHandeling/twoPhaseFileWriter/: __init__.pyi
jneqsim/neqsim/processSimulation/controllerDevice/: __init__.pyi
jneqsim/neqsim/processSimulation/mechanicalDesign/separator/: __init__.pyi
jneqsim/neqsim/processSimulation/processEquipment/compressor/: __init__.pyi
jneqsim/neqsim/processSimulation/processEquipment/separator/: __init__.pyi
jneqsim/neqsim/processSimulation/processEquipment/splitter/: __init__.pyi
jneqsim/neqsim/processSimulation/processEquipment/stream/: __init__.pyi
jneqsim/neqsim/processSimulation/util/monitor/: __init__.pyi
jneqsim/neqsim/standards/: __init__.pyi
jneqsim/neqsim/statistics/: __init__.pyi
jneqsim/neqsim/statistics/dataAnalysis/dataSmoothing/: __init__.pyi
jneqsim/neqsim/thermo/mixingRule/: __init__.pyi
jneqsim/neqsim/thermo/phase/: __init__.pyi
jneqsim/neqsim/thermo/system/: __init__.pyi
jneqsim/neqsim/thermodynamicOperations/flashOps/saturationOps/: __init__.pyi
jneqsim/neqsim/util/unit/: __init__.pyi
jneqsim/tests/: test_dependency_management.py  test_dependency_only.py  test_multiple_versions.py  test_simple.py  test_simple_neqsim_model.py
src/jneqsim_test/: __init__.py  __init__.pyi
src/jneqsim_test/jneqsim-java8/: pyproject.toml
src/jneqsim_test/jneqsim-java8/jneqsim_java8/: __init__.py
tests/: conftest.py  test_dependency_management.py  test_dependency_only.py  test_jar_caching.py  test_multiple_versions.py  test_simple.py  test_simple_neqsim_model.py
