[tool.poetry]
name = "jneqsim"
version = "0.2.0"
description = "Python bindings for the Java library NeqSim (via J), with python stubs"
authors = ["Jørgen <jenge@equinor.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.11"
JPype1 = "^1.4.1"

[tool.poetry.group.dev.dependencies]
stubgenj = "^0.2.12"
pytest = "^7.4.1"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
)/
'''

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    # "I",  # isort
    "S",
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # automatically upgrade syntax for newer versions of the language
    "RUF", # ruff specific rules
]

target-version = "py311"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"] # Ignore `E402` (import violations) in all `__init__.py` files
"**/tests/*" = ["E402", "S101"]
