[tool.poetry]
name = "jneqsim-stubs"
version = "0.1.0"
description = "Python stubs for NeqSim Java in jneqsim package"
authors = ["Jørgen <jenge@equinor.com>"]
license = "Apache-2.0"
packages = [{include="jneqsim-stubs"}]


[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
