[tool.poetry]
name = "jneqsim"
version = "0.1.0"
description = "A java virtual machine connected to NeqSim, with python stubs"
authors = ["Jørgen <jenge@equinor.com>"]
license = "Apache-2.0"
#packages = [
#    { include = "jneqsim-stubs"},
#]

[tool.poetry.dependencies]
python = "^3.11"
JPype1 = "^1.4.1"
jneqsim-stubs = { file="../jneqsim-stubs/dist/jneqsim_stubs-0.1.1-py3-none-any.whl"}

[tool.poetry.group.dev.dependencies]
stubgenj = "^0.2.12"
pytest = "^7.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
